// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Divider CustomStyles smoke-test 1`] = `
<div style="margin: 0px auto; max-width: 600px;">
  <table cellpadding="0"
         cellspacing="0"
         role="presentation"
         style="border: 0px; vertical-align: top; width: 100%;"
  >
    <tbody>
      <tr>
        <td align="center"
            style="vertical-align: top;"
        >
          <h2>
            Hello World 1
          </h2>
          <hr style="margin: auto; border-top: 4px solid red; width: 50%;">
          <h2>
            Hello World 2
          </h2>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`components/Divider Default smoke-test 1`] = `
<div style="margin: 0px auto; max-width: 600px;">
  <table cellpadding="0"
         cellspacing="0"
         role="presentation"
         style="border: 0px; vertical-align: top; width: 100%;"
  >
    <tbody>
      <tr>
        <td align="center"
            style="vertical-align: top;"
        >
          <h2>
            Hello World 1
          </h2>
          <hr style="margin-left: 0px; border-top: 1px solid; width: 100%;">
          <h2>
            Hello World 2
          </h2>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
